Ensure that last swiper element is visible (desktop, tablet, mobile)

--- a/styles/content.css
+++ b/styles/content.css
@@ -531,12 +531,16 @@
 	height: 1px !important;
 	background: var(--color-gray-200);
 	border-radius: var(--radius-full);
+	left: 0 !important;
+	right: 0 !important;
+	width: 100% !important;
+	margin: var(--space-md) 0 0 0;
 }
 
 .featured-products-swiper .swiper-scrollbar-drag {
 	background: var(--color-black);
 	border-radius: var(--radius-full);
-	height: 100%;
+	height: 100% !important;
 	cursor: pointer;
 	transition: var(--transition-all);
 }
